snmp validation choice moved as config para
